--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/lima.jpg)">
                         <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                             <small class="my-0">
-                                Lima opi
+                                Lima opi por unidad
                             </small>  
                            <p class="my-0">
                                  $140
@@ -172,7 +172,7 @@
                         <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/brochas.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
-                                    Brochas
+                                    Brochas por unidad
                                 </small>  
                                <p class="my-0">
                                      $400
@@ -192,7 +192,7 @@
                         <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/limpiauñas.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
-                                    Limpia uñas
+                                    Limpia uñas por unidad
                                 </small>  
                                <p class="my-0">
                                      $250
