--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/limpiauñas.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
-                                    Limpia uñas por unidad
+                                    Limpia uñas
                                 </small>  
                                <p class="my-0">
                                      $250
