--- a/decoraciones.html
+++ b/decoraciones.html
@@ -175,13 +175,22 @@
             </div>          
             <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                  <img src="./img/productos/manicura/polvoespejo2.jpg" class="card-img-top" alt="...">
+                  <img src="./img/productos/manicura/polvoespejo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
                     <h5 class="card-title">Polvo espejo por unidad</h5>
                     <p class="card-text"> $350</p>
                   </div>
                 </div>
             </div>
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto6">
+              <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                <img src="./img/productos/manicura/polvoholo.jpg" class="card-img-top" alt="...">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Polvo holografico por unidad</h5>
+                  <p class="card-text"> $350</p>
+                </div>
+              </div>
+          </div>
             </div>
           </div>
         </div>
