--- a/manicuras.html
+++ b/manicuras.html
@@ -185,7 +185,7 @@
                 </div>          
                 <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto6">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
-                      <img src="./img/productos/manicura/polvoespejo2.jpg" class="card-img-top" alt="...">
+                      <img src="./img/productos/manicura/polvoespejo.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
                         <h5 class="card-title">Polvo espejo por unidad</h5>
                         <p class="card-text"> $350</p>
@@ -193,6 +193,15 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto7">
+                  <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+                    <img src="./img/productos/manicura/polvoholo.jpg" class="card-img-top" alt="...">
+                    <div class="card-body text-center">
+                      <h5 class="card-title">Polvo holografico por unidad</h5>
+                      <p class="card-text"> $350</p>
+                    </div>
+                  </div>
+              </div>
+                <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto8">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/foil.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -201,7 +210,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto8">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto9">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/cajafoil.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -210,7 +219,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto9">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto10">
                     <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                       <img src="./img/productos/manicura/pegamento.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -219,7 +228,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto10">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto11">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img//productos/manicura/lima.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -228,7 +237,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto11">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto12">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/limpiauñas.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -237,7 +246,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto12">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto13">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/repujador2.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
@@ -246,7 +255,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto13">
+                  <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto14">
                     <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                       <img src="./img/productos/manicura/bloques.jpg" class="card-img-top" alt="...">
                       <div class="card-body text-center">
