--- a/index.html
+++ b/index.html
@@ -37,13 +37,9 @@
                         </a>
                         
                         <ul style="background-color: #cc0066 !important" class="dropdown-menu text-white border border-white py-2" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item text-white" href="brochas.html">Brochas</a></li>
                             <li><a class="dropdown-item text-white" href="decoraciones.html">Decoraciones</a></li>
                             <li><a class="dropdown-item text-white" href="foil.html">Foil</a></li>
-                            <li><a class="dropdown-item text-white" href="limas.html">Limas</a></li>
-                            <li><a class="dropdown-item text-white" href="limpiadordeuñas.html">Limpiador de uñas</a></li>
-                            <li><a class="dropdown-item text-white" href="repujador.html">Repujador</a></li>
-                            <li><a class="dropdown-item text-white" href="taco.html">Taco</a></li>
+                            <li><a class="dropdown-item text-white" href="utencillosuñas.html">Utencillos para uñas</a></li>    
                         </ul>
                         <div class="d-none mx-auto border-lg-top">
                                 
@@ -159,23 +155,23 @@
                 </h4>
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/polvoespejo.jpg)">
+                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/cintas-100.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
                                     Polvo espejo por unidad
                                 </small>  
                                <p class="my-0">
-                                     $350
+                                     $100
                                </p>
                             </div> 
                         </div>
-                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/brochas.jpg)">
+                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/2cortauñas-350.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
-                                    Brochas por unidad
+                                    Combo de cortauñas
                                 </small>  
                                <p class="my-0">
-                                     $400
+                                     $350
                                </p>
                             </div> 
                         </div>
@@ -189,13 +185,13 @@
                                </p>
                             </div> 
                         </div>
-                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/limpiauñas.jpg)">
+                        <div class="swiper-slide d-flex flex-column justify-content-end text-white text-center" style="background-image:url(./img/productos/manicura/strass.jpg)">
                             <div style="background-color: #cc0066 !important; opacity: 0.9" class=" col-11 mx-auto my-2 rounded-pill">
                                 <small class="my-0">
-                                    Limpia uñas
+                                    Strass por unidad
                                 </small>  
                                <p class="my-0">
-                                     $250
+                                     $350
                                </p>
                             </div> 
                         </div>
