--- a/decoraciones.html
+++ b/decoraciones.html
@@ -43,13 +43,9 @@
 
                 <ul style="background-color: #cc0066 !important"
                   class="dropdown-menu text-white border border-white py-2" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item text-white" href="brochas.html">Brochas</a></li>
-                  <li><a class="dropdown-item text-white" href="decoraciones.html">Decoraciones</a></li>
-                  <li><a class="dropdown-item text-white" href="foil.html">Foil</a></li>
-                  <li><a class="dropdown-item text-white" href="limas.html">Limas</a></li>
-                  <li><a class="dropdown-item text-white" href="limpiadordeuñas.html">Limpiador de uñas</a></li>
-                  <li><a class="dropdown-item text-white" href="repujador.html">Repujador</a></li>
-                  <li><a class="dropdown-item text-white" href="taco.html">Taco</a></li>
+                    <li><a class="dropdown-item text-white" href="decoraciones.html">Decoraciones</a></li>
+                    <li><a class="dropdown-item text-white" href="foil.html">Foil</a></li>
+                    <li><a class="dropdown-item text-white" href="utencillosuñas.html">Utencillos para uñas</a></li>                 
                 </ul>
                 <div class="d-none mx-auto border-lg-top">
 
@@ -111,32 +107,18 @@
             </h5>
             <ul class="list-unstyled">
               <li class="mb-2">
-                <a href="brochas.html" class="text-decoration-none" style="color:#ff40a0 !important">Brochas</a>
-              </li>
-              <li class="mb-2">
                 <a href="decoraciones.html" class="text-decoration-none" style="color:#ff40a0 !important">Decoraciones</a>
               </li>
               <li class="mb-2">
                 <a href="foil.html" class="text-decoration-none" style="color:#ff40a0 !important">Foil</a>
               </li>
               <li class="mb-2">
-                <a href="limas.html" class="text-decoration-none" style="color:#ff40a0 !important">Limas</a>
-              </li>
-              <li class="mb-2">
-                <a href="limpiadordeuñas.html" class="text-decoration-none" style="color:#ff40a0 !important">Limpiador de uñas</a>
-              </li>
-              <li class="mb-2">
-                <a href="repujador.html" class="text-decoration-none" style="color:#ff40a0 !important">Repujador</a>
-              </li>
-              <li class="mb-2">
-                <a href="taco.html" class="text-decoration-none" style="color:#ff40a0 !important">Taco</a>
-              </li>
-              
-              
+                <a href="utencillosuñas.html" class="text-decoration-none" style="color:#ff40a0 !important">Utencillos de uñas</a>
+              </li>        
             </ul>
           </div>
           <div class="col-lg-10">
-            <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
+            <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4" id="productos">
               <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img/productos/manicura/cajadecoholo.jpg" class="card-img-top" alt="...">
@@ -190,6 +172,15 @@
                   <p class="card-text"> $350</p>
                 </div>
               </div>
+          </div>
+          <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto7">
+            <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
+              <img src="./img/productos/manicura/cintas-100.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">Cintas para decoracion por unidad</h5>
+                <p class="card-text"> $100</p>
+              </div>
+            </div>
           </div>
             </div>
           </div>
