--- a/decoraciones.html
+++ b/decoraciones.html
@@ -161,7 +161,7 @@
             </ul>
           </div>
           <div class="col-lg-10">
-            <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4" id="productos">
+            <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4 mt-5" id="productos">
               <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img/productos/manicura/cajadecoholo.jpg" class="card-img-top" alt="...">
