--- a/decoraciones.html
+++ b/decoraciones.html
@@ -162,7 +162,7 @@
           </div>
           <div class="col-lg-10">
             <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4 mt-5" id="productos">
-              <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1">
+              <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto1" id="producto1">
                 <div class="card h-100" style="border: solid 1px #fc4aa3;cursor: pointer;">
                   <img src="./img/productos/manicura/cajadecoholo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -171,7 +171,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto2">
+              <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto2" id="producto2">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/decoholo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -180,7 +180,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto3">
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto3" id="producto3">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/strass.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -189,7 +189,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto4">
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto4" id="producto4">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/sticker.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -198,7 +198,7 @@
                   </div>
                 </div>
             </div>          
-            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto5">
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto5" id="producto5">
                 <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                   <img src="./img/productos/manicura/polvoespejo.jpg" class="card-img-top" alt="...">
                   <div class="card-body text-center">
@@ -207,7 +207,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto6">
+            <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto6" id="producto6">
               <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
                 <img src="./img/productos/manicura/polvoholo.jpg" class="card-img-top" alt="...">
                 <div class="card-body text-center">
@@ -216,7 +216,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto7">
+          <div class="col-xs-12 col-sm-8 mx-auto mx-md-0 col-md-4 col-xl-3 producto7" id="producto7">
             <div class="card h-100" style="border: solid 1px #ff40a0;cursor: pointer;">
               <img src="./img/productos/manicura/cintas-100.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
