--- a/foil.html
+++ b/foil.html
@@ -197,7 +197,7 @@
     </section>
     <footer>
       <div style="background-color: #fa55a8; " class="text-white p-5">
-        <i class="fas fa-exclamation"></i> Por el momento la forma de pago es en efectivo
+        <i class="fas fa-exclamation"></i> Pago en efectivo, mercado pago , debito y credito
       </div>
       <div style="background-color: #ff40a0; " class="text-white p-5">
         <i class="fas fa-exclamation"></i> Realizamos ventas mayoristas y minoristas, consulte los precios
