--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </article>
             <article>
                 <div style ="background-color: #fa55a8; "class="text-white p-5">
-                    <i class="fas fa-exclamation"></i> Por el momento la forma de pago es en efectivo
+                    <i class="fas fa-exclamation"></i> Pago en efectivo, mercado pago , debito y credito
                 </div>   
             </article>
             <article>
